all working, fix del instruction for temp.exe in Windows